@@ -1,3 +1,5 @@
+    - Added inflation of Twitter return HASH refs to Moose objects
+
 3.03003 2009-07-07
     - Fixed a typo in Makefile.PL
 
